--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ form label {
   margin: 0;
   padding: 0;
   width: 25%;
-  text-align: left;
+  text-align: center;
   list-style: none;
   display: -moz-inline-stack;
   display: inline-block;
